--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Doar - Associação Caminho de Casa</title>
     <meta charset="utf-8" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://i.imgur.com/hkxVz0e.jpg" />
+    <meta property="og:image:type" content="img/jpeg" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Doar - Associação Caminho de Casa</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
