Finish credit card operation

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,17 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Sandbox -->
+    <!-- <script
+      type="text/javascript"
+      src="https://sandbox.boletobancario.com/boletofacil/wro/direct-checkout.min.js"
+    ></script> -->
+
+    <!-- Production -->
+    <script
+      type="text/javascript"
+      src="https://www.boletobancario.com/boletofacil/wro/direct-checkout.min.js"
+    ></script>
   </head>
 
   <body>
