--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,18 @@
       type="text/javascript"
       src="https://www.boletobancario.com/boletofacil/wro/direct-checkout.min.js"
     ></script>
+
+    <!-- Hotjar Tracking Code for https://doar.caminhodecasa.org.br -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2688511,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   </head>
 
   <body>
